// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Label] renders without crashing 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#4163f4",
        "borderBottomRightRadius": 16,
        "borderTopLeftRadius": 16,
        "borderTopRightRadius": 16,
        "display": "flex",
        "height": 32,
        "justifyContent": "center",
        "left": "0%",
        "position": "absolute",
        "top": -64,
        "transform": Array [
          Object {
            "rotate": "-45deg",
          },
          Object {
            "translateX": -22.627416997969522,
          },
        ],
        "width": 32,
      }
    }
    testID="LabelTestID"
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
          },
        ]
      }
    >
      0
    </Text>
  </View>
</View>
`;

exports[`[Marks] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "justifyContent": "center",
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      clickable={true}
      position={-4.454545454545454}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": -4.454545454545454,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={5.454545454545454}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 5.454545454545454,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={15.363636363636363}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 15.363636363636363,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={25.272727272727273}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 25.272727272727273,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={35.18181818181818}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 35.18181818181818,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={45.090909090909086}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 45.090909090909086,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={55}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 55,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={64.9090909090909}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 64.9090909090909,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={74.81818181818181}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 74.81818181818181,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={84.72727272727272}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 84.72727272727272,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
    <View
      accessible={true}
      clickable={true}
      position={94.63636363636363}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "left": 94.63636363636363,
            "position": "absolute",
            "width": 9.909090909090908,
          },
        ]
      }
      width={9.909090909090908}
    >
      <View
        testID="marks-test-id"
      />
    </View>
  </View>
</View>
`;

exports[`[Rail] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#bcdbfb",
          "borderRadius": 1,
          "height": 3,
          "width": "100%",
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
    testID="RailTestID"
  />
</View>
`;

exports[`[Slider] render renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "justifyContent": "center",
          "position": "relative",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#bcdbfb",
            "borderRadius": 1,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      testID="rail-test-id"
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#0B21E8",
            "height": 3,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "10%",
          },
        ]
      }
      testID="track-test-id"
      width={10}
    />
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "justifyContent": "center",
            "position": "absolute",
          },
        ]
      }
      testID="marks-test-id"
    >
      <View
        accessible={true}
        clickable={true}
        position={1.6363636363636362}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 1.6363636363636362,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={1.3636363636363635}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 1.3636363636363635,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={1.0909090909090908}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 1.0909090909090908,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={0.8181818181818181}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 0.8181818181818181,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={0.5454545454545454}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 0.5454545454545454,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={0.2727272727272727}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 0.2727272727272727,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={0}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": 0,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={-0.2727272727272727}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": -0.2727272727272727,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={-0.5454545454545454}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": -0.5454545454545454,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={-0.8181818181818179}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": -0.8181818181818179,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        position={-1.0909090909090908}
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "left": -1.0909090909090908,
              "position": "absolute",
              "width": -0.2727272727272727,
            },
          ]
        }
        width={-0.2727272727272727}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#4163f4",
                "height": 3,
                "width": 3,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
    <View
      percent={10}
      style={
        Array [
          Object {
            "left": "10%",
            "position": "absolute",
          },
        ]
      }
      testID="thumb-positioner-test-id"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#0b21e8",
              "borderRadius": 6,
              "height": 12,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
                Object {
                  "translateX": -6,
                },
              ],
              "width": 12,
            },
          ]
        }
        testID="thumb-test-id"
      >
        <View
          style={
            Object {
              "backgroundColor": "black",
              "borderRadius": 12,
              "height": 24,
              "left": -6,
              "opacity": 0.12,
              "position": "absolute",
              "top": -6,
              "transform": Array [
                Object {
                  "scale": 0.01,
                },
              ],
              "width": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`[Track] [Thumb] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#0b21e8",
          "borderRadius": 6,
          "height": 12,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "translateX": -6,
            },
          ],
          "width": 12,
        },
      ]
    }
    testID="ThumbTestID"
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 12,
          "height": 24,
          "left": -6,
          "opacity": 0.12,
          "position": "absolute",
          "top": -6,
          "transform": Array [
            Object {
              "scale": 0.01,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`[Track] [Track] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#0B21E8",
          "height": 3,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "50%",
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
    testID="TrackTestID"
    width={50}
  />
</View>
`;

exports[`[Track] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "gray",
          "borderRadius": 3,
          "height": 6,
          "width": 200,
        },
      ]
    }
  />
</View>
`;
